[511] UI-only: Adjust homepage banner height and fix style issues on mobile (#512)
* fix mobile/tables style for the homepage, reduce home hero height

* adjust mobile styling on the Map analysis page

--- a/application/frontend/src/scaffolding/Header/header.scss
+++ b/application/frontend/src/scaffolding/Header/header.scss
@@ -37,12 +37,12 @@
     .header__nav-bar__link {
       padding-top: 10px;
       padding-bottom: 10px;
-      text-align: center;
-      margin: 0 2px;
 
       .item {
         width: 100%;
         height: 100%;
+        margin: 0;
+        text-align: center;
       }
       &:hover:not(.header__nav-bar__link--active) .item {
         text-decoration: underline;
@@ -79,9 +79,20 @@ nav + * {
   }
 }
 
-@media (min-width: 0px) and (max-width: 520px) {
+@media (min-width: 0px) and (max-width: 770px) {
   .header__nav-bar {
     justify-content: center;
+
+    &.ui.secondary.menu {
+      padding: 0 0 10px;
+      flex-direction: column;
+      align-items: center;
+
+      .header__nav-bar-logo {
+        margin-right: 0;
+        padding: 20px 0 0;
+      }
+    }
 
     &.ui.menu:not(.vertical) .right.menu {
       display: flex;
